# BackWebApp

./: .dockerignore  .env.example  .gitignore  Dockerfile  PITITEST.py  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  config.py
app/models/: article.py  box.py  campaign.py  subscriber.py
app/routes/: __init__.py  admin_articles.py  admin_auth.py  admin_campaigns.py  admin_dashboard.py  admin_history.py  admin_subscribers.py  subscriber_routes.py
app/services/: article_service.py  auth_service.py  box_service.py  campaign_service.py  csv_service.py  dashboard_service.py  subscriber_service.py
app/store/: memory_store.py
app/utils/: pagination.py  validators.py
optimizer/: api.py  cli.py  csv_io.py  greedy.py  models.py  scorer.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_article_routes.py  test_campaign_routes.py  test_csv_io.py  test_dashboard.py  test_greedy.py  test_scorer.py  test_subscriber_routes.py
