[project]
name = "toyboxing"
version = "0.1.0"
description = "Crazy Charly Day 2026 — ToyBoxing backend"
requires-python = ">=3.12"
dependencies = ["flask>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
