[project]
name = "toyboxing"
version = "1.0.0"
description = "Crazy Charly Day 2026 — ToyBoxing backend"
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
